# sova

./: CMakeLists.txt  README.md
src/: args.h  cmdln.cc  cmdln.h  main.cc
src/capture/: ctrl.cc  ctrl.h
src/capture/storage/: entry.h  file.cc  file.h  log.h  stdout.cc  stdout.h
src/capture/util/: time.cc  time.h
src/capture/x/: window.h  xadapter.cc  xadapter.h
